Fix spelling in image path for projects.json
Corrected the spelling of 'başlat-durdur' in the image path.

--- a/assets/data/projects.json
+++ b/assets/data/projects.json
@@ -11,7 +11,7 @@
     "images": [
       "assets/images/gui başlangıç ekranı.png",
       "assets/images/haber doğrulama ekranı.png",
-      "assets/images/server bşlat-durdur2.png",
+      "assets/images/server başlat-durdur2.png",
       "assets/images/ses doğrulama ekranı.png"
     ],
     "featured": true
